@@ -32,6 +32,8 @@ This is intended for use by applications which transform the exception to an HTT
 * `wrap-reitit-route` adds the matched Reitit route to the server span and request map.
 - [ADD] New interceptor `exception-event-interceptor` adds an exception event to the server span.
 This is intended for use by applications which transform the exception to an HTTP response in a subsequent interceptor.
+- [ADD] Function `steffan-westcott.clj-otel.instrumentation.runtime-telemetry-java8/close!` to stop JVM telemetry.
+`steffan-westcott.clj-otel.instrumentation.runtime-telemetry-java8/register!` now returns a collection of `AutoCloseable`.
 
 === `0.2.3` (2023-06-18)
 
